--- a/day24_content-placeholder/index.html
+++ b/day24_content-placeholder/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Content Placeholder</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="card">
-        <div class="card-header animated-bg" id="header">
-            <img src="https://images.unsplash.com/photo-1496181133206-80ce9b88a853?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" alt="">
+      <div class="card-header animated-bg" id="header">&nbsp;</div>
+
+      <div class="card-content">
+        <h3 class="card-title animated-bg animated-bg-text" id="title">
+          &nbsp;
+        </h3>
+        <p class="card-excerpt" id="excerpt">
+          &nbsp;
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+        </p>
+        <div class="author">
+          <div class="profile-img animated-bg" id="profile_img">&nbsp;</div>
+          <div class="author-info">
+            <strong class="animated-bg animated-bg-text" id="name"
+              >&nbsp;</strong
+            >
+            <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
+          </div>
         </div>
-        <div class="card-content">
-            <h3 class="card-title animated-bg animated-bg-text" id="title">Lorem ipsum dolor sit amet.</h3>
-            <p class="card-excerpt" id="excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, similique.
-                <span class="animated-bg animated-bg-text">&nbsp;</span>
-                <span class="animated-bg animated-bg-text">&nbsp;</span>
-                <span class="animated-bg animated-bg-text">&nbsp;</span>
-            </p>
-            <div class="author">
-                <div class="profile-img animated-bg" id="profile_img">
-                    <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="">
-                </div>
-                <div class="author-info">
-                    <strong class="animated-bg animated-bg-text" id="name">John Doe</strong>
-                    <small class="animated-bg animated-bg-text" id="date">Oct 08, 2020</small>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
